<resources>
    <string name="app_name">Bank Protection</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="verify_contact">Verify Contact</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOG IN</string>
    <string name="invalid_credentials">Invalid username and/or password</string>
    <string name="login_failed">Login failed, check username and password</string>
    <string name="unknown_error_message">Unknown error</string>
    <string name="no_internet_connection">No internet connection. Check connection</string>
    <string name="please_wait">Please wait</string>
    <string name="start_verification">Start verification</string>
    <string name="pending_verification">Pending Verification</string>
    <string name="refresh">Refresh</string>
    <string name="phone_number">Phone number</string>
    <string name="request_verification_title">Request Verification</string>
    <string name="request_verification_details">Please provide contact phone number to request contact verification:</string>
    <string name="provide_this_code_title">Let\'s Verify You</string>
    <string name="provide_this_code_details">Please provide the following code to your contact to verify you:</string>
    <string name="confirm_code_correctness">OK</string>
    <string name="verify_code_title">Let\'s Verify Your Contact</string>
    <string name="verify_code_details">Ask your contact for code and confirm it\'s the below one:</string>
    <string name="pending_verifications_title">Verifications Codes</string>
    <string name="no_pending_verifications_title">No pending verifications</string>
    <string name="this_user_verification_code">Your code: %1$s</string>
    <string name="verification_succeed_title">Verification Succeed</string>
    <string name="verification_succeed_details">Both sides have been successfully verified</string>
    <string name="opposite_user_verification_code">Your contact code: %1$s</string>
    <string name="phone_number_not_found">Phone number not found</string>
    <string name="operation_forbidden">This operation is forbidden</string>
    <string name="please_provide_correct_phone_number">Please provide correct phone number</string>
    <string name="confirm_code_valid">Code valid</string>
</resources>
